--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,5 +47,27 @@
   {{/if}}
  
 </body>
+<p> 
+  Mission Statement: To provide a safe and supportive environment for people to share their experiences and learn from each other.
+</p>
+<footer>
+  
+  <div class="footerRow">
+    <div class="col-md-12">
+      <span class="footer_company">© LEAN ON ME</span>
+      <span class="footer_company">All Rights Reserved</span>
+      <span class="footer_company">Terms of Use</span>
+      <span class="footer_company">Privacy Policy</span>
+      <span class="footer_company">Contact Us</span>
+    </div>
+      <address class= "footerRow2">
+        <span class="footer_company">Lean On Me</span>
+        <span class="footer_company">1234 Main Street</span>
+        <span class="footer_company">Anytown, USA 12345</span>
+        <span class="footer_company">Phone: 555-555-5555</span>
+        <span class="footer_company">Email:INFO@LEANONEME.ORG</span>
+      </address>
+    </div>
+  </div>
 
 </html>
