--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+
 <h2>Login</h2>
 
 <form class="login-form">
@@ -12,4 +13,4 @@
 
 </div>
 <div class="sign-up"><a href="/signup">Sign up to start volunteering!</a></div>
-<script src="../public/javascript/login.js"></script>
+<script src="/javascript/login.js"></script>
