--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,5 +59,28 @@
   {{/if}}
   
 </body>
+<footer>
+  </div>
+    <div class="Contact">
+      <p>Contact Us</p>
+      <p class="address">Address:
+        1234 Main Street
+        Chicago, USA 62345
+      </p>
+      <p class="phone">Phone: 555-555-5555</p>
+      <P class="email"><a href="mailto:INFO@LEANONEME.ORG">INFO@LEANONME.ORG</a></P>
+    </div>
+      
+  <div class="footer">
+    <p>© 2020 Lean On Me</p>
+    <p> <a href="/about">About Us</a></p>
+    <p> <a href="/privacy">Privacy Policy</a></p>
+    <p> <a href="/terms">Terms of Service</a></p>
+    <p> <a href="/faq">FAQ</a></p>
+  </div>
+</footer>
 
-</html>
+  
+    
+    
+   
