added mission statement

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,6 +57,16 @@
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
+
+  <!--mission statement-->
+  <div class="mission">
+    <h2>Our Mission</h2>
+    <p>Lean On Me is a non-profit organization that provides a safe space for people to share their stories and
+    experiences. We believe that every community needs a sense of belonging and a place to feel safe. 
+    <p>We provide resources and support to include healthcare, community clean up, child care services, and more. We are here to listen and help you through your journey. 
+    </p>
+    </p>
+  </div>
   
 </body>
 <footer>
@@ -67,7 +77,7 @@
         1234 Main Street
         Chicago, USA 62345
       </p>
-      <p class="phone">Phone: 555-555-5555</p>
+      <p class="phone">Phone: 847-555-5955</p>
       <P class="email"><a href="mailto:INFO@LEANONEME.ORG">INFO@LEANONME.ORG</a></P>
     </div>
       
