--- a/public/css/style.css
+++ b/public/css/style.css
@@ -379,9 +379,19 @@ h3 {
   background-color: #f8ededd0;
   text-shadow: 2px 2px 18px rgb(22, 139, 217);
   font-size: 1.3rem;
-  
-
 
 }
-
+.mission{
+  font-size: 1.3rem;
+  background-color: #f8ededd0;
+  width: 350px;
+  border: 15px solid rgb(22, 139, 217);
+  border-radius: 30px;
+  padding: 10px;
+  margin-top: 0;
+  text-align: center;
+  word-spacing: 8px;
+  word-break: normal;
+  word-wrap: break-word;
+}
 
